--- a/index.html
+++ b/index.html
@@ -1,3 +1,6 @@
+
+
+
 <!DOCTYPE html>
 <html lang="es">
 <head>
@@ -212,7 +215,7 @@
         <div class="card">
             <p class="spanish">Mano</p>
             <p class="english">Hand</p>
-            <button class="audio-button" onclick="toggleAudio('hand.mp3', this)">Listen (Escucha)</button>
+            <button class="audio-button" onclick="toggleAudio('hand.mp3', this)">(Escucha)</button>
         </div>
         <div class="card">
             <p class="spanish">Pierna</p>
@@ -483,16 +486,16 @@ function toggleAudio(audioSrc, button) {
     // Si ya hay un audio reproduciéndose, lo pausamos y cambiamos el texto
     if (currentAudio && !currentAudio.paused) {
         currentAudio.pause();
-        button.innerText = Listen';
+        button.innerText = 'Listen (Escucha)';
     } else {
         // Si el audio actual está pausado o no hay audio, reproducimos el nuevo
         currentAudio = new Audio(audioSrc);
         currentAudio.play();
-        button.innerText = 'Pause';
+        button.innerText = 'Listen (Escucha)';
         
         // Cuando el audio termine, restauramos el texto del botón
         currentAudio.onended = function() {
-            button.innerText = 'Listen';
+            button.innerText = 'Listen (Escucha)';
         };
     }
 }
