--- a/index.html
+++ b/index.html
@@ -212,7 +212,7 @@
         <div class="card">
             <p class="spanish">Mano</p>
             <p class="english">Hand</p>
-            <button class="audio-button" onclick="toggleAudio('hand.mp3', this)">(Escucha)</button>
+            <button class="audio-button" onclick="toggleAudio('hand.mp3', this)">Listen (Escucha)</button>
         </div>
         <div class="card">
             <p class="spanish">Pierna</p>
